--- a/frontend_angular/src/index.html
+++ b/frontend_angular/src/index.html
@@ -11,5 +11,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://kit.fontawesome.com/5a8cac8a82.js" crossorigin="anonymous"></script>
 </body>
 </html>
